fix box overflow

--- a/src/assets/scss/_arrangement.scss
+++ b/src/assets/scss/_arrangement.scss
@@ -163,7 +163,7 @@
             }
             .region-select {
                 height: 50px;
-                width: 130px;
+                width: 150px;
                 border-radius: 0;
                 background-image: none !important;
             }
@@ -185,6 +185,7 @@
         }
         .DateInput {
             height: 50px;
+            width: 150px;
         }
     }
 
